<resources>
    <string name="app_name">Consumo</string>
    <string name="action_sign_in_short">Registre-se</string>
    <string name="email">Email</string>
    <string name="minimum_password">Senha muito curta. Tamanho mínumo 6 caracteres!</string>
    <string name="auth_failed">Autenticação falhou, verifique email e senha informados ou registre-se</string>
    <string name="change_email">Mudar Email</string>
    <string name="change_password">Mudar Senha</string>
    <string name="send_password_reset_email">Send Password reset email</string>
    <string name="remove_user">Remover Usuário</string>
    <string name="new_pass">Nova senha</string>
    <string name="title_activity_profile">Firebase</string>
    <string name="title_activity_login">Logar</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Senha</string>
    <string name="hint_name">Nome Completo</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_link_to_register">Não é membro? Registre-se agora!</string>
    <string name="btn_link_to_login">Já sou registrado. Faça Login!</string>
    <string name="title_activity_reset_password">ResetPasswordActivity</string>
    <string name="btn_forgot_password">Esqueceu sua senha?</string>
    <string name="btn_reset_password">Recuperar senha</string>
    <string name="btn_back"><![CDATA[<< Back]]></string>
    <string name="hint_new_email">Novo Email</string>
    <string name="btn_change">Mudar</string>
    <string name="btn_send">Enviar</string>
    <string name="btn_remove">Remover</string>
    <string name="btn_sign_out">Sair</string>
    <string name="btn_alerta">Alertas</string>
    <string name="lbl_forgot_password">Esqueceu a senha?</string>
    <string name="forgot_password_msg">Nós precisamos apenas do seu email registrado para enviar instruções de como recuperar sua senha.</string>
    <string name="lbl_atualizar">Atualizar</string>
    <string name="btn_consumo">Consumo</string>
    <string name="menu_consumo">Consumo</string>
    <string name="menu_opcoes">Opções</string>
    <string name="menu_atualizar">Atualizar</string>
    <string name="menu_sair">Sair</string>
    <string name="lbl_temporalidade_mes">Mês</string>
    <string name="lbl_temporalidade_semana">Semana</string>
    <string name="lbl_temporalidade_dia">Dia</string>
    <string name="lbl_temporalidade_hora">Hora</string>
    <string name="lbl_temporalidade_minuto">Minuto</string>
    <string name="lbl_valor">Valor</string>
    <string name="btn_enviar">Enviar</string>
    <string name="txt_cadastro_alertas">Informe os valores máximos para os tipo de período que desejar;</string>
</resources>
