<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_alerta"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="br.iotpuc.consumo.AlertaActivity">

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:ems="10"
        android:layout_below="@+id/txt_alerta_dia"
        android:layout_alignStart="@+id/txt_alerta_dia"
        android:layout_marginTop="17dp"
        android:id="@+id/txt_alerta_hora" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:ems="10"
        android:layout_below="@+id/txt_alerta_hora"
        android:layout_alignStart="@+id/txt_alerta_hora"
        android:layout_marginTop="22dp"
        android:id="@+id/txt_alerta_minuto" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:ems="10"
        android:layout_marginTop="16dp"
        android:id="@+id/txt_alerta_dia"
        android:layout_below="@+id/txt_alerta_semana"
        android:layout_alignStart="@+id/txt_alerta_semana" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:ems="10"
        android:id="@+id/txt_alerta_mes"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="42dp"
        android:layout_marginTop="53dp" />

    <TextView
        android:text="@string/lbl_temporalidade_mes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView"
        android:layout_marginRight="85dp"
        android:layout_alignBaseline="@+id/txt_alerta_mes"
        android:layout_alignBottom="@+id/txt_alerta_mes"
        android:layout_alignStart="@+id/textView2" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:ems="10"
        android:layout_marginTop="21dp"
        android:id="@+id/txt_alerta_semana"
        android:layout_below="@+id/txt_alerta_mes"
        android:layout_alignStart="@+id/txt_alerta_mes" />

    <TextView
        android:text="@string/lbl_temporalidade_semana"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/txt_alerta_dia"
        android:id="@+id/textView2"
        android:layout_alignParentStart="true" />

    <TextView
        android:text="@string/lbl_temporalidade_dia"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/txt_alerta_hora"
        android:layout_marginBottom="11dp"
        android:id="@+id/textView3"
        android:layout_alignParentStart="true" />

    <TextView
        android:text="@string/lbl_temporalidade_hora"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/txt_alerta_hora"
        android:layout_alignEnd="@+id/textView2"
        android:layout_marginTop="11dp"
        android:id="@+id/textView4"
        android:layout_alignParentStart="true" />

    <TextView
        android:text="@string/lbl_temporalidade_minuto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/txt_alerta_minuto"
        android:layout_alignParentStart="true"
        android:id="@+id/textView6" />

    <TextView
        android:text="@string/txt_cadastro_alertas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:id="@+id/textView7"
        android:layout_alignParentTop="true"
        android:layout_above="@+id/textView" />

    <Button
        android:text="@string/btn_enviar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btn_enviar"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="38dp" />

</RelativeLayout>
